fix: replace Set.of with Java 8 compatible HashSet for CI build
Made-with: Cursor